[cleanup] fixes whitespace for css

--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,3 @@
-/** {
-font-family: 'Roboto', sans-serif;
-}*/
-/*.container {
-background-image: url('http://www.themodernman.com/wp-content/uploads/the-right-attitude-for-approaching-women-in-coffee-shops.jpg');
-background-repeat: no-repeat;
-background-size: cover;
-height: 100%;
-width: 100%;
-}*/
-
 md-input-container label {
   color: #272727;
 }
@@ -41,7 +30,6 @@ img{
   position: fixed;
   top: 0;
   z-index: 2;
-  /*box-shadow: 2px 2px 0 #5E5E5E;*/
 }
 
 .header a {
@@ -71,16 +59,12 @@ img{
   box-shadow: 2px 2px 2px #BF2415;
   border-radius: 3px;
 }
-/*.logo a:hover {
-background-color: #e74c3c;
-}*/
 
 body {
   background-color: #B3D1FF;
   background-color: #F5F5F5;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 .signup_form {
@@ -91,15 +75,9 @@ body {
   border-radius: 30px;
 }
 
-.formcontainer {
-
-}
-
 .login-form {
   background-color: rgba(255,255,255,0.75);
 }
-
-
 
 .login-buttons {
   margin-top: 10px;
@@ -143,9 +121,7 @@ body {
   position: absolute;
   opacity: 20%;
   z-index: 1;
-  /*max-width: 500px;*/
   box-shadow: 2px 2px 2px lightgrey;
-
 }
 
 /************************ CAFE LIST VIEW STYLES **************************************/
@@ -171,7 +147,6 @@ body {
   height: 120px;
   width: 150px;
   margin-right: 10px;
-  /*padding: 10px 10px;;*/
   object-fit: cover;
   float: left;
   border: none;
@@ -193,7 +168,6 @@ body {
   font-weight: 300;
   font-size: 1.2em;
   width: 150px;
-  /*letter-spacing: 1.5px;*/
 }
 
 .coffeeShopAddress {
@@ -205,7 +179,6 @@ body {
 }
 
 /***************** Appointments ********************/
-
 .appointmentsDashboard {
   height: 550px;
   max-height: 600px;
@@ -218,7 +191,6 @@ body {
 }
 
 /*ACCORDION ANIMATION FOR APPOINTMENTS DASHBOARD*/
-
 .appointmentsDashboard.ng-hide-add,
 .appointmentsDashboard.ng-hide-remove {
   display: block !important;
@@ -235,14 +207,12 @@ body {
 }
 
 /* end animation */
-
 .appointmentsTitle {
   position: relative;
   margin: 0 auto;
   margin-top: 10px;
   text-align: center;
   font-weight: 300;
-  /*letter-spacing: 2px;*/
 }
 
 .appointment {
@@ -252,8 +222,6 @@ body {
   background-color: white;
   box-shadow: 2px 2px 2px lightgrey;
   border-radius: 3px;
-  /*border-bottom: 1px solid lightgrey;*/
-  /*z-index: 1;*/
 }
 
 .appointmentData {
@@ -277,27 +245,18 @@ body {
   padding-bottom: 5px;
   font-size: 1.7em;
   font-weight: 300;
-/*padding-top: 5px;
-margin-left: 5px;
-float: left;*/
 }
 
 .hostDateTime {
   font-size: .8em;
-/*margin-left: 5px;
-float: left;*/
 }
 
 .hostBio {
-  /*border-top: 1px solid lightgrey;*/
   clear: both;
   height: 100%;
-  /*width: 100%;*/
   background-color: rgba(255,255,255,0.5);
-  /*line-height: 5pc;*/
 }
 .aboutHostHeader{
-  /*background-color: #EDEFED;*/
   width: 100%;
   border-top: 1px solid lightgrey;
 }
@@ -306,7 +265,6 @@ float: left;*/
   font-size: 1.3em;
   font-weight: 300;
   text-align: center;
-  /*margin-left: 85px;*/
 }
 .hostBioText {
   margin-left: 55px;
@@ -314,24 +272,8 @@ float: left;*/
   line-height: 17px;
 }
 
-/*.hostBio.ng-hide-add,
-.hostBio.ng-hide-remove {
-display: block !important;
-height: 0px;
-}
-.hostBio.ng-hide-remove.ng-hide-remove-active {
-height: 100px;
-}
-.hostBio.ng-hide-add {
-height: 200px;
-}
-.hostBio.ng-hide-add.ng-hide-add-active {
-height: 0;
-}*/
-
 .addAppointmentButton {
   right: 0;
-  /*top: 0;*/
   float: right;
 }
 
@@ -339,22 +281,13 @@ height: 0;
   margin: 10px 10%;
 }
 
-/*.day {
-display: inline-block;
-box-shadow: 2px 2px 2px lightgrey;
-border: none;
-height: 25px;
-}*/
-
 .createNew {
   background-color: #70C1B3;
-  /*letter-spacing: 1.2px;*/
   width: 40px;
   height: 40px;
   color: white;
   border: none;
   padding: 10px;
-  /*position: relative;*/
   margin: 0 auto;
   align-items: center;
   display: block;
@@ -363,12 +296,8 @@ height: 25px;
 }
 
 .timeDayInput {
-  /*margin: auto;*/
   margin: 0 auto;
-  /*margin-left: 1em;*/
   display: inline-block;
-  /*width: 100%;*/
-  /*align-items: center;*/
 }
 
 .time {
@@ -378,10 +307,8 @@ height: 25px;
   border: none;
   border-right: 1px solid lightgrey;
   height: 25px;
-  /*margin: 10px 10%;*/
   margin: 0 auto;
   margin-left: 20px;
-  /*float: left;*/
   width: 40%;
 }
 
@@ -396,43 +323,24 @@ height: 25px;
   box-shadow: 2px 2px 2px lightgrey;
   height: 25px;
   width: 50%;
-  /*margin: 10px 5px;*/
   margin: 0 auto;
 
   border-radius: 3px;
   display: inline-block;
-  /*float: left;*/
 }
 
 .timeAndSubmitButtons {
   margin: 0 auto;
   display: block;
   margin-left: 40px;
-  /*margin-left: 200px;*/
 }
-
-/*.addAppointmentButton:hover {
-background-color: green;
-}*/
-
-/*.addAppointmentButton:active {
-background-color: darkgreen;
-}*/
 
 .hostName {
   font-size: 1.5em;
   font-weight: 200;
 }
 
-.appointmentData {
-  /*float: left;*/
-  /*display: inline-block;*/
-  /*float: left;*/
-}
-
 .joinButton {
-  /*float: right;*/
-  /*margin:0;*/
   letter-spacing: 2px;
   display: inline-block;
   float: right;
@@ -443,19 +351,13 @@ background-color: darkgreen;
   color: white;
   border: none;
   vertical-align: middle;
-  /*overflow: hidden;*/
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-
 }
 
 /***************** MAP INFO WINDOW STYLES**********************/
 .gm-style-iw {
   min-height: 120px;
-  /*border-bottom: 1px solid lightgrey;*/
-  /*margin: 10px 10%;*/
-  /*background-color: rgba(255,255,255,.75);*/
-  /*box-shadow: 2px 2px 2px lightgrey;*/
   max-width: 300px;
   border-radius: 3px;
 }
@@ -464,7 +366,6 @@ background-color: darkgreen;
   height: 140px;
   width: 150px;
   margin-right: 10px;
-
   object-fit: cover;
   float: left;
   border: none;
@@ -476,7 +377,6 @@ background-color: darkgreen;
   margin-top: 2px;
   font-weight: 400;
   font-size: 1.3em;
-  /*letter-spacing: 1.5px;*/
 }
 
 .gm-style-iw p {
@@ -508,7 +408,6 @@ background-color: darkgreen;
 }
 
 /****** Appointments.html view ******/
-
 .appointmentsTable {
   margin-top: 70px;
   background-color: white;
@@ -572,13 +471,11 @@ background-color: darkgreen;
   font-size: 12px;
   float:left;
   border: none;
-  /*margin: 1px;*/
   border-radius: none;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
   background-color: #F25F5C;
   color: white;
-  /*margin-left: -10px;*/
 }
 
 .acceptDenyButton {
@@ -597,52 +494,43 @@ th {
 }
 
 
-
 /*MEDIA QUERIES FOR MOBILE */
 @media(max-width: 1000px) {
-  #map {
-    width: 100%;
-    height: 400px;
-    clear: both;
-    margin: auto;
-    margin-top: -10px;
-  }
-
-  .cafeList {
-    display: inline;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    box-shadow: none;
-    /*clear: both;*/
-    margin: auto;
-    margin-top:350px;
-    /*background-color: white;*/
-    overflow: visible;
-  }
-
-  .hostName {
-    font-size: 13px;
-  }
-
-  .hostDateTime {
-    font-size: 10px;
-  }
-
-  .appointmentsTable {
-    width: auto;
-    margin-top: 42px;
-  }
-
-  .appointmentsTableHeader {
-    margin-right: -5px;
-  }
-/*.day {
-margin-left: -30px;
+#map {
+  width: 100%;
+  height: 400px;
+  clear: both;
+  margin: auto;
+  margin-top: -10px;
 }
-.time {
-margin-left: -30px;
-}*/
+
+.cafeList {
+  display: inline;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  box-shadow: none;
+  margin: auto;
+  margin-top:350px;
+  overflow: visible;
+}
+
+.hostName {
+  font-size: 13px;
+}
+
+.hostDateTime {
+  font-size: 10px;
+}
+
+.appointmentsTable {
+  width: auto;
+  margin-top: 42px;
+}
+
+.appointmentsTableHeader {
+  margin-right: -5px;
+}
 
 .links {
   width: 22%;
@@ -652,7 +540,6 @@ margin-left: -30px;
   vertical-align: middle;
   padding-top: 6px;
   float: left;
-}
 }
 
 .loading {
